Finished part 3 of the Django Tutorial

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,16 +5,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-		<title>detail</title>
+		<title>404 - Page not found</title>
 
 	</head>
 
 	<body>
-		<h1>{{ poll.question }}</h1>
-		<ul>
-			{% for choice in poll.choice_set.all %}
-			<li>{{ choice.choice }}</li>
-			{% endfor %}
-		</ul>
+	<h1>The page you requested was not found.</h1>
 	</body>
 </html>
